--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -16,6 +16,7 @@ body {
   background: var(--background);
   color: var(--foreground);
   font-family: Arial, Helvetica, sans-serif;
+  overflow: hidden;
 }
 
 .accordion-trigger {
@@ -24,8 +25,15 @@ body {
 
 .accordion-content {
   @apply 
-    px-3 py-2 bg-gray-50 border-t border-gray-200 absolute top-full left-0 right-0 shadow-lg space-y-3 
+    px-3 py-2 bg-gray-50 border-t border-gray-200 shadow space-y-3 
     *:text-sm *:flex *:items-center *:justify-between;
+  overflow: hidden;
+  max-height: 0;
+  transition: max-height 200ms ease;
+}
+
+.accordion-content[data-state="open"] {
+  max-height: 1000px;
 }
 
 .button-gray {
