--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -23,21 +23,6 @@ body {
   @apply flex items-center justify-between w-full px-3 py-2 hover:bg-gray-50;
 }
 
-.accordion-content {
-  @apply 
-    px-3 py-2 bg-gray-50 border-t border-gray-200 shadow space-y-3 
-    *:text-sm *:flex *:items-center *:justify-between;
-  overflow: hidden;
-}
-
-.accordion-content[data-state="open"] {
-  animation: slideDown 100ms ease-out forwards;
-}
-
-.accordion-content[data-state="closed"] {
-  animation: slideUp 100ms ease-in forwards;
-}
-
 /* Scrollable accordion content for large trees */
 .accordion-content-scrollable {
   @apply 
@@ -56,28 +41,16 @@ body {
   max-height: 0;
 }
 
-@keyframes slideDown {
-  from {
-    height: 0;
-    opacity: 0;
-  }
-  to {
-    height: var(--radix-accordion-content-height);
-    opacity: 1;
-  }
-}
-
-@keyframes slideUp {
-  from {
-    height: var(--radix-accordion-content-height);
-    opacity: 1;
-  }
-  to {
-    height: 0;
-    opacity: 0;
-  }
-}
-
-.button-gray {
+.btn-gray {
   @apply bg-gray-500 text-white px-2 py-1 rounded hover:bg-gray-600 text-center w-full !block;
+}
+
+.bim-component-container {
+  @apply 
+    flex flex-col space-y-3 absolute bottom-full mb-3 bg-white border border-gray-300 rounded-lg shadow-lg p-4 
+    *:text-sm *:flex *:items-center *:justify-between;
+}
+
+.bim-component-guide {
+  @apply flex-col items-start! list-disc list-inside;
 }
