downsize bottom toolbar

--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -26,7 +26,7 @@ body {
 .bim-component-container {
   @apply 
     flex flex-col space-y-3 absolute bottom-full mb-3 bg-white border border-gray-300 rounded-lg shadow-lg p-4 
-    *:text-sm *:flex *:items-center *:justify-between;
+    *:text-xs *:flex *:items-center *:justify-between;
 }
 
 .bim-component-guide {
