--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -20,7 +20,7 @@ body {
 }
 
 .btn-gray {
-  @apply bg-gray-500 text-white px-2 py-1 rounded hover:bg-gray-600 text-center w-full !block;
+  @apply bg-gray-500 text-white px-2 py-1 rounded hover:bg-gray-600 text-center w-full block! cursor-pointer;
 }
 
 .bim-component-container {
